--- a/heat-config.ini
+++ b/heat-config.ini
@@ -1,8 +1,8 @@
 [global]
-auth-url=
+auth-url=http://172.31.0.101:5000/v2.0
 username=mirchev
-password=
-tenant-id=
-tenant-name=
-domain-id=default
-domain-name=Default
+password=secretsecret
+tenant-id=d388edd35616447db69dda8bbf0a5980
+tenant-name=k8s-autoscale
+# domain-id=default
+# domain-name=Default
