--- a/autoscale.yaml
+++ b/autoscale.yaml
@@ -73,7 +73,17 @@ resources:
           port_range_max: 443
         - remote_mode: remote_group_id
 
-  # PROVISIONING SCRIPTS
+  # MASTER WAIT CONDITION
+  master_wait_handle:
+    type: OS::Heat::WaitConditionHandle
+
+  master_wait_condition:
+    type: OS::Heat::WaitCondition
+    depends_on: master
+    properties:
+      handle: {get_resource: master_wait_handle}
+      timeout: 6000
+
   provision_instance:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -85,7 +95,14 @@ resources:
     properties:
       parts:
         - config: {get_resource: provision_instance}
-        - config: kubeadm init --token 30f54b.f400ed0dc93169df --pod-network-cidr 10.17.0.0/16
+        - config:
+            str_replace:
+              template: |
+                #!/bin/bash
+                kubeadm init --token 30f54b.f400ed0dc93169df --pod-network-cidr 10.17.0.0/16 --cloud-provider openstack
+                $wait_notify --data-binary '{"status": "SUCCESS"}' || $wait_notify --data-binary '{"status": "FAILURE"}' &
+              params:
+                $wait_notify: {get_attr: [master_wait_handle, curl_cli]}
 
   install_minion:
     type: OS::Heat::MultipartMime
@@ -94,9 +111,11 @@ resources:
         - config: {get_resource: provision_instance}
         - config:
             str_replace:
-              template: kubeadm join --token 30f54b.f400ed0dc93169df $$master_ip
+              template: |
+                #!/bin/bash
+                kubeadm join --token 30f54b.f400ed0dc93169df $master_ip
               params:
-                "$$master_ip": {get_attr: [kube_master_eth0, fixed_ips, 0, ip_address]}
+                $master_ip: {get_attr: [kube_master_eth0, fixed_ips, 0, ip_address]}
 
   # MASTER NODE
   master:
@@ -107,6 +126,7 @@ resources:
       image: {get_param: image}
       flavor: {get_param: flavor}
       key_name: {get_param: key}
+      personality: {"/home/ubuntu/heat-config.ini": {get_file: "heat-config.ini"}, "/home/ubuntu/deployment.yaml": {get_file: "deployment.yaml"}, "/etc/kubernetes/cloud-config.json": {get_file: "heat-config.ini"}}
       user_data_format: RAW
       user_data: {get_resource: install_master}
       networks:
@@ -133,7 +153,7 @@ resources:
     type: OS::Heat::AutoScalingGroup
     depends_on:
       - router-interface
-      - master
+      - master_wait_condition
     properties:
       min_size: 0
       max_size: 20
@@ -145,6 +165,7 @@ resources:
           image: { get_param: image }
           flavor: { get_param: flavor }
           key_name: { get_param: key }
+          personality: {"/home/ubuntu/heat-config.ini": {get_file: "heat-config.ini"}}
           user_data_format: RAW
           user_data: {get_resource: install_minion}
           networks:
