--- a/autoscale.yaml
+++ b/autoscale.yaml
@@ -15,7 +15,7 @@ parameters:
     type: string
     label: Flavor
     description: Type of instance (flavor) to be used on the compute instance.
-    default: m1.small
+    default: k8s-flavor
   key:
     type: string
     label: Key name
