--- a/heat-config.ini
+++ b/heat-config.ini
@@ -1,8 +1,8 @@
 [global]
 auth-url=http://172.31.0.101:5000/v2.0
 username=mirchev
-password=secretsecret
-tenant-id=d388edd35616447db69dda8bbf0a5980
+password=secret
+tenant-id=91908fb11f60410eb2574d9fcea3fd52
 tenant-name=k8s-autoscale
 # domain-id=default
 # domain-name=Default
