--- a/deployment.yaml
+++ b/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             - ./cluster-autoscaler
             - --v=4
             - --cloud-provider=openstack-heat
-            - --cloud-config=/home/ubuntu/heat-config.ini
+            - --cloud-config=/home/k8s/heat-config.ini
             - --nodes=1:10:node_cluster:autoscale:cluster_size
             - --leader-elect=false
           env:
@@ -39,8 +39,8 @@ spec:
           imagePullPolicy: "Always"
           volumeMounts:
           - name: config
-            mountPath: /home/ubuntu
+            mountPath: /home/k8s
       volumes:
         - name: config
           hostPath:
-            path: /home/ubuntu
+            path: /home/k8s
