--- a/autoscale.yaml
+++ b/autoscale.yaml
@@ -41,7 +41,7 @@ resources:
     type: OS::Heat::SoftwareConfig
     properties:
       group: ungrouped
-      config: {get_file: https://raw.githubusercontent.com/taimir/kube-openstack/master/k8s-user.yaml}
+      config: {get_file: "https://raw.githubusercontent.com/taimir/kube-openstack/master/k8s-user.yaml"}
 
   # NETWORKS
   private_network:
@@ -95,7 +95,42 @@ resources:
     type: OS::Heat::SoftwareConfig
     properties:
       group: ungrouped
-      config: {get_file: https://raw.githubusercontent.com/taimir/kube-openstack/master/provision.sh}
+      config: |
+        #!/bin/bash
+
+        # Install prerequisites
+        # 	* docker
+        #	* socat
+        #	* kubelet (systemd service)
+        #	* kubectl (/usr/bin binary)
+        # * kubeadm (/usr/bin binary)
+        echo "Starting provisioning with kubeadm"
+        sudo apt-get update
+        sudo apt-get install -y docker.io socat apt-transport-https
+
+        # hack for openstack
+        sudo systemctl unmask docker.socket
+        sudo systemctl restart docker
+
+        curl -s -L https://storage.googleapis.com/kubeadm/kubernetes-xenial-preview-bundle.txz | tar xJv
+        sudo dpkg -i kubernetes-xenial-preview-bundle/*.deb
+
+        # hack for openstack
+        sudo sed -i -e 's#KUBELET_EXTRA_ARGS=#KUBELET_EXTRA_ARGS=--cloud-config=/etc/kubernetes/cloud-config.json --cloud-provider=openstack #g' /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
+
+        cat <<EOF > /etc/kubernetes/cloud-config.json
+        [global]
+        auth-url=http://172.31.0.101:5000/v2.0
+        username=mirchev
+        password=secret
+        tenant-id=91908fb11f60410eb2574d9fcea3fd52
+        tenant-name=k8s-autoscale
+        # domain-id=default
+        # domain-name=Default
+        EOF
+
+        sudo systemctl daemon-reload
+        sudo systemctl restart kubelet
 
   install_master:
     type: OS::Heat::MultipartMime
@@ -135,7 +170,7 @@ resources:
       image: {get_param: image}
       flavor: {get_param: flavor}
       key_name: {get_param: key}
-      personality: {"/home/k8s/heat-config.ini": {get_file: https://raw.githubusercontent.com/taimir/kube-openstack/master/heat-config.ini}, "/home/k8s/deployment.yaml": {get_file: https://raw.githubusercontent.com/taimir/kube-openstack/master/deployment.yaml}}
+      personality: {"/home/k8s/heat-config.ini": {get_file: "https://raw.githubusercontent.com/taimir/kube-openstack/master/heat-config.ini"}, "/home/k8s/deployment.yaml": {get_file: "https://raw.githubusercontent.com/taimir/kube-openstack/master/deployment.yaml"}}
       user_data_format: RAW
       user_data: {get_resource: install_master}
       networks:
@@ -152,6 +187,8 @@ resources:
 
   kube_master_floating:
       type: OS::Neutron::FloatingIP
+      depends_on:
+        - router-interface
       properties:
         floating_network: {get_param: public_network}
         port_id: {get_resource: kube_master_eth0}
@@ -180,7 +217,7 @@ resources:
           key_name: { get_param: key }
           name:
             list_join: [-, [node, {get_resource: server_name_post_fix}]]
-          personality: {"/home/k8s/heat-config.ini": {get_file: https://raw.githubusercontent.com/taimir/kube-openstack/master/heat-config.ini}}
+          personality: {"/home/k8s/heat-config.ini": {get_file: "https://raw.githubusercontent.com/taimir/kube-openstack/master/heat-config.ini"}}
           user_data_format: RAW
           user_data: {get_resource: install_minion}
           networks:
@@ -194,7 +231,6 @@ resources:
         - {get_resource: secgroup_autoscale}
       fixed_ips:
         - subnet: {get_resource: private_subnet}
-      replacement_policy: AUTO
 
   kube_minion_floating:
     type: OS::Neutron::FloatingIP
